# o-ran-e2-kpm

./: .gitignore  .gitmodules  README.md  current work.md  package-lock.json  tested_result_wait_to_put_on_readme.md
flexric/examples/xApp/c/control/: CMakeLists.txt  xapp_mac_ctrl.c  xapp_oran_ctrl.c  xapp_slice_moni_ctrl.c
flexric/examples/xApp/c/helloworld/: CMakeLists.txt  hw.c
flexric/examples/xApp/c/kpm_rc/: CMakeLists.txt  xapp_kpm_rc.c
flexric/examples/xApp/c/monitor/: CMakeLists.txt  xapp.conf  xapp_all_moni.c  xapp_cust_moni.c  xapp_kpm_moni.c  xapp_oran_moni.c
flexric/examples/xApp/c/tc/: CMakeLists.txt  xapp_tc_all.c  xapp_tc_codel.c  xapp_tc_ecn.c  xapp_tc_osi_codel.c  xapp_tc_partition.c
flexric/src/: CMakeLists.txt
flexric/src/agent/: CMakeLists.txt  e2_agent.c  e2_agent.h  e2_agent_api.c  e2_agent_api.h  msg_handler_agent.c  not_handler_agent.c  plugin_agent.c
flexric/src/lib/: CMakeLists.txt  async_event.h  correlation_events.c  correlation_events.h  pending_events.h
flexric/src/lib/ap/dec/: e2ap_msg_dec_asn.c
flexric/src/lib/ap/e2ap_types/: CMakeLists.txt  e2_node_connected.c  e2_setup_failure.c  e2_setup_failure.h  e2_setup_request.c  e2_setup_request.h  e2_setup_response.c  e2_setup_response.h  e2ap_error_indication.c  e2ap_error_indication.h  e2ap_reset_request.c  e2ap_reset_request.h  e2ap_reset_response.c  e2ap_reset_response.h  ric_control_ack.c  ric_control_failure.c  ric_control_failure.h  ric_service_query.c  ric_service_query.h  ric_service_update.c  ric_service_update.h  ric_service_update_ack.c  ric_service_update_ack.h  ric_service_update_failure.c  ric_service_update_failure.h  ric_subscription_failure.c  ric_subscription_failure.h
flexric/src/lib/ap/e2ap_types/common/: e2ap_cause.h  e2ap_node_component_config.c  e2ap_node_component_config.h  e2ap_node_component_config_ack.c  e2ap_node_component_config_ack.h  e2ap_node_component_config_update_ack_item.h  e2ap_node_component_id.c  e2ap_node_component_id.h  e2ap_node_component_interface_type.c  e2ap_node_component_interface_type.h  e2ap_ran_function.h
flexric/src/lib/ap/enc/: e2ap_msg_enc_asn.c
flexric/src/lib/ap/free/: e2ap_msg_free.c
flexric/src/lib/ap/ie/asn/: AMFName.c  AMFName.h  CMakeLists.txt  Cause.c  Cause.h  CauseE2node.c  CauseE2node.h  CauseMisc.c  CauseMisc.h  CauseProtocol.c  CauseProtocol.h  CauseRICrequest.c  CauseRICrequest.h  CauseRICservice.c  CauseRICservice.h  CauseTransport.c  CauseTransport.h  Criticality.c  Criticality.h  CriticalityDiagnostics-IE-Item.c  CriticalityDiagnostics-IE-Item.h  CriticalityDiagnostics-IE-List.c  CriticalityDiagnostics-IE-List.h  CriticalityDiagnostics.c  CriticalityDiagnostics.h  E2AP-PDU.c  E2AP-PDU.h  E2RemovalFailure.c  E2RemovalFailure.h  E2RemovalRequest.c  E2RemovalRequest.h  E2RemovalResponse.c  E2RemovalResponse.h  E2connectionSetupFailed-Item.c  E2connectionSetupFailed-Item.h  E2connectionSetupFailed-List.c  E2connectionSetupFailed-List.h  E2connectionUpdate-Item.c  E2connectionUpdate-Item.h  E2connectionUpdate-List.c  (+276 more)
flexric/src/lib/e2ap/: ric_indication_wrapper.h
flexric/src/lib/e2ap/v1_01/: CMakeLists.txt  e2ap_ap.h  e2ap_ap_asn.c  type_defs.h
flexric/src/lib/e2ap/v1_01/dec/: e2ap_msg_dec_asn.c  e2ap_msg_dec_asn.h  e2ap_msg_dec_fb.c
flexric/src/lib/e2ap/v1_01/e2ap_types/: CMakeLists.txt  e42_update_e2_node.h
flexric/src/lib/e2ap/v1_01/enc/: e2ap_msg_enc_asn.c  e2ap_msg_enc_asn.h  e2ap_msg_enc_fb.c
flexric/src/lib/e2ap/v1_01/free/: e2ap_msg_free.c  e2ap_msg_free.h
flexric/src/lib/e2ap/v2_03/: e2ap_ap.h  e2ap_ap_asn.c  type_defs.h
flexric/src/lib/e2ap/v3_01/: CMakeLists.txt  e2ap_ap.h  e2ap_ap_asn.c  type_defs.h
flexric/src/lib/msg_hand/: reg_e2_nodes.c  reg_e2_nodes.h
flexric/src/ric/: CMakeLists.txt  act_req.h  e2_node.c  msg_handler_ric.c  near_ric.c  near_ric.h
flexric/src/ric/iApp/: CMakeLists.txt  e42_iapp.c  e42_iapp.h  e42_iapp_api.c  e42_iapp_api.h  ind_event.h  map_xapps_sockaddr.c  map_xapps_sockaddr.h  msg_handler_iapp.c  msg_handler_iapp.h  reg_e2_nodes.c.old
flexric/src/ric/iApps/: stdout.c
flexric/src/sm/gtp_sm/: gtp_sm_agent.c  gtp_sm_ric.c
flexric/src/sm/gtp_sm/enc/: gtp_enc_plain.c
flexric/src/sm/gtp_sm/ie/: gtp_data_ie.h
flexric/src/sm/kpm_sm/kpm_sm_v02.03/: kpm_sm_agent.c
flexric/src/sm/kpm_sm/kpm_sm_v03.00/: kpm_sm_agent.c
flexric/src/sm/kpm_sm_v2.02/: kpm_sm_ric.c
flexric/src/sm/mac_sm/: mac_sm_agent.c  mac_sm_ric.c
flexric/src/sm/mac_sm/dec/: mac_dec_plain.c
flexric/src/sm/mac_sm/enc/: mac_enc_plain.c
flexric/src/sm/mac_sm/ie/: mac_data_ie.c  mac_data_ie.h
flexric/src/sm/pdcp_sm/: pdcp_sm_agent.c  pdcp_sm_ric.c
flexric/src/sm/rc_sm/: rc_sm_agent.c
flexric/src/sm/rc_sm/test/: fill_rnd_data_rc.c
flexric/src/sm/rlc_sm/: rlc_sm_agent.c  rlc_sm_ric.c
flexric/src/sm/rlc_sm/ie/: rlc_data_ie.h
flexric/src/sm/slice_sm/: slice_sm_agent.c  slice_sm_ric.c
flexric/src/sm/slice_sm/dec/: slice_dec_plain.c
flexric/src/sm/slice_sm/enc/: slice_enc_plain.c
flexric/src/sm/slice_sm/ie/: slice_data_ie.c
flexric/src/sm/tc_sm/: tc_sm_agent.c  tc_sm_ric.c
flexric/src/util/: CMakeLists.txt  byte_array.c  byte_array.h  conf_file.c  conf_file.h  e2ap_ngran_type.c  e2ap_ngran_types.h
flexric/src/xApp/: CMakeLists.txt  act_proc.c  act_proc.h  e42_xapp.c  e42_xapp.h  e42_xapp_api.c  e42_xapp_api.h  msg_dispatcher_xapp.c  msg_dispatcher_xapp.h  msg_generator_xapp.c  msg_handler_xapp.c  msg_handler_xapp.h  plugin_agent.c
flexric/src/xApp/db/: CMakeLists.txt  db.c  db.h  db_generic.h
flexric/src/xApp/db/mysql/: CMakeLists.txt  mysql_wrapper.c  mysql_wrapper.h
flexric/src/xApp/db/sqlite3/: sqlite3_wrapper.c  sqlite3_wrapper.h
flexric/src/xApp/swig/: CMakeLists.txt  swig_wrapper.cpp  swig_wrapper.h  swig_wrapper.i
flexric/test/agent-ric-xapp/: CMakeLists.txt  test_ag_ric_xapp.c
flexric/test/proxy_agent/: CMakeLists.txt  benchmarking.txt  config_get.2021.12.17.json  config_get.2022.09.16.json  gnb-sa-n78-plmn50501-locn.cfg  qos_flow_get.json  stats.json  tst-msg_json_ws.c  tst-perf_json_ws.c  ue_get.json
flexric/test/utils/: CMakeLists.txt  tst-bimap.c
(+996 files in other folders)
