set(ASN_MODULE_SRCS
    AMFName.c
    ANY.c
    asn_application.c
    asn_bit_data.c
    asn_codecs_prim.c
    asn_internal.c
    asn_random_fill.c
    asn_SEQUENCE_OF.c
    asn_SET_OF.c
    ber_decoder.c
    ber_tlv_length.c
    ber_tlv_tag.c
    BIT_STRING.c
    Cause.c
    CauseE2node.c
    CauseMisc.c
    CauseProtocol.c
    CauseRICrequest.c
    CauseRICservice.c
    CauseTransport.c
    constraints.c
    constr_CHOICE.c
    constr_SEQUENCE.c
    constr_SEQUENCE_OF.c
    constr_SET_OF.c
    constr_TYPE.c
    Criticality.c
    CriticalityDiagnostics.c
    CriticalityDiagnostics-IE-Item.c
    CriticalityDiagnostics-IE-List.c
    der_encoder.c
    E2AP-PDU.c
    E2connectionSetupFailed-Item.c
    E2connectionSetupFailed-List.c
    E2connectionUpdateAcknowledge.c
    E2connectionUpdate.c
    E2connectionUpdateFailure.c
    E2connectionUpdate-Item.c
    E2connectionUpdate-List.c
    E2connectionUpdateRemove-Item.c
    E2connectionUpdateRemove-List.c
    E2nodeComponentConfigAdditionAck-Item.c
    E2nodeComponentConfigAdditionAck-List.c
    E2nodeComponentConfigAddition-Item.c
    E2nodeComponentConfigAddition-List.c
    E2nodeComponentConfigRemovalAck-Item.c
    E2nodeComponentConfigRemovalAck-List.c
    E2nodeComponentConfigRemoval-Item.c
    E2nodeComponentConfigRemoval-List.c
    E2nodeComponentConfigUpdateAck-Item.c
    E2nodeComponentConfigUpdateAck-List.c
    E2nodeComponentConfigUpdate-Item.c
    E2nodeComponentConfigUpdate-List.c
    E2nodeComponentConfigurationAck.c
    E2nodeComponentConfiguration.c
    E2nodeComponentID.c
    E2nodeComponentInterfaceE1.c
    E2nodeComponentInterfaceF1.c
    E2nodeComponentInterfaceNG.c
    E2nodeComponentInterfaceS1.c
    E2nodeComponentInterfaceType.c
    E2nodeComponentInterfaceW1.c
    E2nodeComponentInterfaceX2.c
    E2nodeComponentInterfaceXn.c
    E2nodeConfigurationUpdateAcknowledge.c
    E2nodeConfigurationUpdate.c
    E2nodeConfigurationUpdateFailure.c
    E2nodeConnected-List.c
    E2nodeTNLassociationRemoval-Item.c
    E2nodeTNLassociationRemoval-List.c
    E2RemovalFailure.c
    E2RemovalRequest.c
    E2RemovalResponse.c
    E2setupFailure.c
    E2setupRequest.c
    E2setupResponse.c
    E42RICcontrolRequest.c
    E42RICsubscriptionDeleteRequest.c
    E42RICsubscriptionRequest.c
    E42setupRequest.c
    E42setupResponse.c
    ENB-ID.c
    ENB-ID-Choice.c
    ENGNB-ID.c
    ErrorIndication.c
    GlobalE2node-eNB-ID.c
    GlobalE2node-en-gNB-ID.c
    GlobalE2node-gNB-ID.c
    GlobalE2node-ID.c
    GlobalE2node-ng-eNB-ID.c
    GlobalENB-ID.c
    GlobalenGNB-ID.c
    GlobalgNB-ID.c
    GlobalngeNB-ID.c
    GlobalNG-RANNode-ID.c
    GlobalRIC-ID.c
    GNB-CU-UP-ID.c
    GNB-DU-ID.c
    GNB-ID-Choice.c
    InitiatingMessage.c
    INTEGER.c
    MMEname.c
    NativeEnumerated.c
    NativeInteger.c
    NGENB-DU-ID.c
    OCTET_STRING.c
    OPEN_TYPE.c
    per_decoder.c
    per_encoder.c
    per_opentype.c
    per_support.c
    PLMN-Identity.c
    Presence.c
    PrintableString.c
    ProcedureCode.c
    ProtocolIE-Container.c
    ProtocolIE-ContainerList.c
    ProtocolIE-ContainerPair.c
    ProtocolIE-ContainerPairList.c
    ProtocolIE-Field.c
    ProtocolIE-FieldPair.c
    ProtocolIE-ID.c
    ProtocolIE-SingleContainer.c
    RANfunctionDefinition.c
    RANfunctionID.c
    RANfunctionIDcause-Item.c
    RANfunctionID-Item.c
    RANfunction-Item.c
    RANfunctionOID.c
    RANfunctionRevision.c
    RANfunctionsIDcause-List.c
    RANfunctionsID-List.c
    RANfunctions-List.c
    ResetRequest.c
    ResetResponse.c
    RICaction-Admitted-Item.c
    RICaction-Admitted-List.c
    RICactionDefinition.c
    RICactionID.c
    RICaction-NotAdmitted-Item.c
    RICaction-NotAdmitted-List.c
    RICactions-ToBeSetup-List.c
    RICaction-ToBeSetup-Item.c
    RICactionType.c
    RICcallProcessID.c
    RICcontrolAcknowledge.c
    RICcontrolAckRequest.c
    RICcontrolFailure.c
    RICcontrolHeader.c
    RICcontrolMessage.c
    RICcontrolOutcome.c
    RICcontrolRequest.c
    RICeventTriggerDefinition.c
    RICindication.c
    RICindicationHeader.c
    RICindicationMessage.c
    RICindicationSN.c
    RICindicationType.c
    RICrequestID.c
    RICserviceQuery.c
    RICserviceUpdateAcknowledge.c
    RICserviceUpdate.c
    RICserviceUpdateFailure.c
    RICsubscriptionDeleteFailure.c
    RICsubscriptionDeleteRequest.c
    RICsubscriptionDeleteRequired.c
    RICsubscriptionDeleteResponse.c
    RICsubscriptionDetails.c
    RICsubscriptionFailure.c
    RICsubscription-List-withCause.c
    RICsubscriptionRequest.c
    RICsubscriptionResponse.c
    RICsubscription-withCause-Item.c
    RICsubsequentAction.c
    RICsubsequentActionType.c
    RICtimeToWait.c
    SuccessfulOutcome.c
    TimeToWait.c
    TNLinformation.c
    TNLusage.c
    TransactionID.c
    TriggeringMessage.c
    TypeOfError.c
    UnsuccessfulOutcome.c
    XAPP-ID.c
    xer_decoder.c
    xer_encoder.c
    xer_support.c
)

set(ASN_MODULE_HDRS
    AMFName.h
    ANY.h
    asn_application.h
    asn_bit_data.h
    asn_codecs.h
    asn_codecs_prim.h
    asn_constant.h
    asn_internal.h
    asn_ioc.h
    asn_random_fill.h
    asn_SEQUENCE_OF.h
    asn_SET_OF.h
    asn_system.h
    ber_decoder.h
    ber_tlv_length.h
    ber_tlv_tag.h
    BIT_STRING.h
    CauseE2node.h
    Cause.h
    CauseMisc.h
    CauseProtocol.h
    CauseRICrequest.h
    CauseRICservice.h
    CauseTransport.h
    constraints.h
    constr_CHOICE.h
    constr_SEQUENCE.h
    constr_SEQUENCE_OF.h
    constr_SET_OF.h
    constr_TYPE.h
    CriticalityDiagnostics.h
    CriticalityDiagnostics-IE-Item.h
    CriticalityDiagnostics-IE-List.h
    Criticality.h
    der_encoder.h
    E2AP-PDU.h
    E2connectionSetupFailed-Item.h
    E2connectionSetupFailed-List.h
    E2connectionUpdateAcknowledge.h
    E2connectionUpdateFailure.h
    E2connectionUpdate.h
    E2connectionUpdate-Item.h
    E2connectionUpdate-List.h
    E2connectionUpdateRemove-Item.h
    E2connectionUpdateRemove-List.h
    E2nodeComponentConfigAdditionAck-Item.h
    E2nodeComponentConfigAdditionAck-List.h
    E2nodeComponentConfigAddition-Item.h
    E2nodeComponentConfigAddition-List.h
    E2nodeComponentConfigRemovalAck-Item.h
    E2nodeComponentConfigRemovalAck-List.h
    E2nodeComponentConfigRemoval-Item.h
    E2nodeComponentConfigRemoval-List.h
    E2nodeComponentConfigUpdateAck-Item.h
    E2nodeComponentConfigUpdateAck-List.h
    E2nodeComponentConfigUpdate-Item.h
    E2nodeComponentConfigUpdate-List.h
    E2nodeComponentConfigurationAck.h
    E2nodeComponentConfiguration.h
    E2nodeComponentID.h
    E2nodeComponentInterfaceE1.h
    E2nodeComponentInterfaceF1.h
    E2nodeComponentInterfaceNG.h
    E2nodeComponentInterfaceS1.h
    E2nodeComponentInterfaceType.h
    E2nodeComponentInterfaceW1.h
    E2nodeComponentInterfaceX2.h
    E2nodeComponentInterfaceXn.h
    E2nodeConfigurationUpdateAcknowledge.h
    E2nodeConfigurationUpdateFailure.h
    E2nodeConfigurationUpdate.h
    E2nodeConnected-List.h
    E2nodeTNLassociationRemoval-Item.h
    E2nodeTNLassociationRemoval-List.h
    E2RemovalFailure.h
    E2RemovalRequest.h
    E2RemovalResponse.h
    E2setupFailure.h
    E2setupRequest.h
    E2setupResponse.h
    E42RICcontrolRequest.h
    E42RICsubscriptionDeleteRequest.h
    E42RICsubscriptionRequest.h
    E42setupRequest.h
    E42setupResponse.h
    ENB-ID-Choice.h
    ENB-ID.h
    ENGNB-ID.h
    ErrorIndication.h
    GlobalE2node-eNB-ID.h
    GlobalE2node-en-gNB-ID.h
    GlobalE2node-gNB-ID.h
    GlobalE2node-ID.h
    GlobalE2node-ng-eNB-ID.h
    GlobalENB-ID.h
    GlobalenGNB-ID.h
    GlobalgNB-ID.h
    GlobalngeNB-ID.h
    GlobalNG-RANNode-ID.h
    GlobalRIC-ID.h
    GNB-CU-UP-ID.h
    GNB-DU-ID.h
    GNB-ID-Choice.h
    InitiatingMessage.h
    INTEGER.h
    MMEname.h
    NativeEnumerated.h
    NativeInteger.h
    NGENB-DU-ID.h
    OCTET_STRING.h
    OPEN_TYPE.h
    per_decoder.h
    per_encoder.h
    per_opentype.h
    per_support.h
    PLMN-Identity.h
    Presence.h
    PrintableString.h
    ProcedureCode.h
    ProtocolIE-Container.h
    ProtocolIE-ContainerList.h
    ProtocolIE-ContainerPair.h
    ProtocolIE-ContainerPairList.h
    ProtocolIE-Field.h
    ProtocolIE-FieldPair.h
    ProtocolIE-ID.h
    ProtocolIE-SingleContainer.h
    RANfunctionDefinition.h
    RANfunctionIDcause-Item.h
    RANfunctionID.h
    RANfunctionID-Item.h
    RANfunction-Item.h
    RANfunctionOID.h
    RANfunctionRevision.h
    RANfunctionsIDcause-List.h
    RANfunctionsID-List.h
    RANfunctions-List.h
    ResetRequest.h
    ResetResponse.h
    RICaction-Admitted-Item.h
    RICaction-Admitted-List.h
    RICactionDefinition.h
    RICactionID.h
    RICaction-NotAdmitted-Item.h
    RICaction-NotAdmitted-List.h
    RICactions-ToBeSetup-List.h
    RICaction-ToBeSetup-Item.h
    RICactionType.h
    RICcallProcessID.h
    RICcontrolAcknowledge.h
    RICcontrolAckRequest.h
    RICcontrolFailure.h
    RICcontrolHeader.h
    RICcontrolMessage.h
    RICcontrolOutcome.h
    RICcontrolRequest.h
    RICeventTriggerDefinition.h
    RICindication.h
    RICindicationHeader.h
    RICindicationMessage.h
    RICindicationSN.h
    RICindicationType.h
    RICrequestID.h
    RICserviceQuery.h
    RICserviceUpdateAcknowledge.h
    RICserviceUpdateFailure.h
    RICserviceUpdate.h
    RICsubscriptionDeleteFailure.h
    RICsubscriptionDeleteRequest.h
    RICsubscriptionDeleteRequired.h
    RICsubscriptionDeleteResponse.h
    RICsubscriptionDetails.h
    RICsubscriptionFailure.h
    RICsubscription-List-withCause.h
    RICsubscriptionRequest.h
    RICsubscriptionResponse.h
    RICsubscription-withCause-Item.h
    RICsubsequentAction.h
    RICsubsequentActionType.h
    RICtimeToWait.h
    SuccessfulOutcome.h
    TimeToWait.h
    TNLinformation.h
    TNLusage.h
    TransactionID.h
    TriggeringMessage.h
    TypeOfError.h
    UnsuccessfulOutcome.h
    XAPP-ID.h
    xer_decoder.h
    xer_encoder.h
    xer_support.h
)

add_library(e2ap_asn1_obj OBJECT ${ASN_MODULE_SRCS})
#${ASN_MODULE_HDRS})
target_include_directories(e2ap_asn1_obj
                          PUBLIC
                           "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
                           )

target_compile_options(e2ap_asn1_obj PUBLIC "-DASN_DISABLE_OER_SUPPORT")
target_compile_options(e2ap_asn1_obj PRIVATE -Wno-missing-field-initializers -Wno-unused-parameter)

